# LearnSRenderer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
image/: boggie.tga  depth.tga  diablo3.tga  frame.tga  framebuffer.tga
image/Release/: depth.tga  frame.tga
source/: CMakeLists.txt  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.h
